# gpt1

./: .replit  main.py  pyproject.toml  replit.nix  replit_zip_error_log.txt
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/: __replit_disk_meta.json
.cache/replit/nix/: env.json
.upm/: store.json
g4f/Provider/: __init__.py
