[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
requests = "2.31.0"
pycryptodome = "3.18.0"
browser-cookie3 = "^0.19.1"
js2py = "^0.74"
aiohttp = "^3.8.5"
curl-cffi = "^0.5.7"
certifi = "^2023.7.22"
websockets = "^11.0.3"
quickjs = "^1.19.2"
flask = "^2.3.3"
flask-cors = "^4.0.0"
typing-extensions = "^4.8.0"
example-pkg-sabarics = "^0.0.1"
gpt = "^0.2"
colorama = "^0.4.6"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"